<resources>
    <string name="app_name">Money Holder</string>
    <string-array name="drawer_cats">
        <item>Home</item>
        <item>Finance</item>
        <item>Statistics</item>
        <item>Debts and credits</item>
        <item>SMS Parsing</item>
        <item>Settings</item>
        <item>Rate app</item>
        <item>Share app</item>
        <item>Feedback</item>
    </string-array>
    <string-array name="cat_ids">
        <item>0</item>
        <item>100</item>
        <item>5</item>
        <item>100</item>
        <item>7</item>
        <item>8</item>
        <item>10</item>
        <item>9</item>
        <item>11</item>
    </string-array>
    <string-array name="statistics_subitems">
        <item>Report by account</item>
        <item>Report by expenses and incomes</item>
        <item>Report by categories</item>
    </string-array>
    <string-array name="statistics_subitems_icons">
        <item>drawer_accountreport</item>
        <item>drawer_incomeexpensereport</item>
        <item>drawer_categoryreport</item>
    </string-array>
    <string-array name="finance_subitems">
        <item>Currencies</item>
        <item>Categories</item>
        <item>Accounts</item>
    </string-array>
    <string-array name="finance_subitem_icons">
        <item>drawer_currency</item>
        <item>drawer_category</item>
        <item>drawer_account</item>
    </string-array>
    <string-array name="debts_subitems">
        <item>Credits</item>
        <item>Debts</item>
    </string-array>
    <string-array name="debts_subitem_icons">
        <item>drawer_credit</item>
        <item>drawer_debts_debt</item>
    </string-array>
    <string-array name="base_currencies">
        <item>Dollars</item>
        <item>Rouble</item>
        <item>Euro</item>
        <item>Hryvnia</item>
        <item> Sterling </item>
        <item> Leo </item>
        <item> Tenge </item>
        <item> The Belarusian ruble </item>
        <item> Armenian Dram </item>
        <item> Shekel </item>
        <item> The yen </item>
        <item> Vaughan </item>
        <item> Afghani </item>
        <item> Lek </item>
        <item> The Algerian Dinar </item>
        <item> Kwanza </item>
        <item> Manat </item>
        <item> Bahraini Dinar </item>
        <item> Such a </item>
        <item> Make </item>
        <item> Real </item>
        <item> Yuan </item>
        <item> Czech Koruna </item>
        <item> Danish Krone </item>
        <item> Egyptian pound </item>
        <item> Cedi </item>
        <item> The forint </item>
        <item> Indian Rupee </item>
        <item> Indonesian rupiah </item>
        <item> The Iranian Rial </item>
        <item> Iraqi Dinar </item>
        <item> The Jordanian Dinar </item>
        <item> The Kuwaiti Dinar </item>
        <item> Philippine Peso </item>
        <item> Zloty </item>
        <item> The Qatari Riyal </item>
        <item> Sum </item>
        <item> The Saudi riyal </item>
        <item> The Swiss franc </item>
        <item> The Serbian Dinar </item>
        <item> Bath </item>
        <item> Lear </item>
    </string-array>
    <string-array name="base_abbrs">
        <item>$</item>
        <item>₽</item>
        <item>€</item>
        <item>₴</item>
        <item>£</item>
        <item>лв</item>
        <item>₸</item>
        <item>Br</item>
        <item>РА</item>
        <item>₪</item>
        <item>¥</item>
        <item>₩</item>
        <item>؋</item>
        <item>L</item>
        <item>.د.ج </item>
        <item>Kz</item>
        <item>АР</item>
        <item>.د.ب </item>
        <item>৳</item>
        <item>KM</item>
        <item>$</item>
        <item>¥</item>
        <item>Kč</item>
        <item>kr</item>
        <item>.ج.م</item>
        <item>﷼₵</item>
        <item>Ft</item>
        <item>₹</item>
        <item>Rp</item>
        <item>﷼</item>
        <item>.د.ع</item>
        <item>.د.إ</item>
        <item>.د.ك</item>
        <item>₱</item>
        <item>zł</item>
        <item>﷼</item>
        <item>uzs</item>
        <item>﷼</item>
        <item>₣</item>
        <item>din</item>
        <item>฿</item>
        <item>₺</item>
    </string-array>
    <string-array name="currency_ids">
        <item>currency_1</item>
        <item>currency_2</item>
        <item>currency_3</item>
        <item>currency_4</item>
        <item>currency_5</item>
        <item>currency_6</item>
        <item>currency_7</item>
        <item>currency_8</item>
        <item>currency_9</item>
        <item>currency_10</item>
        <item>currency_11</item>
        <item>currency_12</item>
        <item>currency_13</item>
        <item>currency_14</item>
        <item>currency_15</item>
        <item>currency_16</item>
        <item>currency_17</item>
        <item>currency_18</item>
        <item>currency_19</item>
        <item>currency_20</item>
        <item>currency_21</item>
        <item>currency_22</item>
        <item>currency_23</item>
        <item>currency_24</item>
        <item>currency_25</item>
        <item>currency_26</item>
        <item>currency_27</item>
        <item>currency_28</item>
        <item>currency_29</item>
        <item>currency_30</item>
        <item>currency_31</item>
        <item>currency_32</item>
        <item>currency_33</item>
        <item>currency_34</item>
        <item>currency_35</item>
        <item>currency_36</item>
        <item>currency_37</item>
        <item>currency_38</item>
        <item>currency_39</item>
        <item>currency_40</item>
        <item>currency_41</item>
        <item>currency_42</item>
    </string-array>
    <string-array name="currency_costs">
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
        <item>1.0</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Caution!!!</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="choose_language">Select language</string>
    <string name="transfer_data">Transfer balance from last month</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Daily notification ON/OFF</string>
    <string name="planning_before_default">10</string>
    <string name="general_notif">general_notif</string>
    <string name="planning_before_summary">Set value</string>
    <string name="planning_before_title">Notice of event</string>
    <string name="filters">Filters</string>
    <string name="finance_record_default">3</string>
    <string name="record_filter_summary">Set value for records in finance</string>
    <string name="finance">Finance</string>
    <string name="report_daily_default">2</string>
    <string name="sync">Synchronization</string>
    <string name="setting_save">Save database to root folder</string>
    <string name="save">Save</string>
    <string name="setting_repair">Restore database from root folder</string>
    <string name="repair">Restore</string>
    <string name="planning_notif_entry">hour</string>
    <string name="planning_notif_summary">Set notice time</string>
    <string name="planning_notif_title">Notice time</string>
    <string name="info">Info</string>
    <string name="save_to_excel">Save in EXCEL</string>
    <string name="no_datas_for_show">There is no data to display!</string>
    <string name="from_contact">From contacts</string>
    <string name="tel_number">Phone number</string>
    <string name="income_keywords">Income \nKeywords:</string>
    <string name="expense_keywords">Expense \nKeywords:</string>
    <string name="only_income">Only income</string>
    <string name="only_expense">Only expense</string>
    <string name="parse_both">Expense and Income</string>
    <string name="currency">Currency</string>
    <string name="amount_keywords">Defining of amount \nKeywords:</string>
</resources>