<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/sixteen_dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fourteen_sp"
                android:text="@string/tel_number"
                android:textColor="@color/toolbar_text_color"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/five_dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSmsParseEditPhoneNumber"
                android:textSize="@dimen/fourteen_sp"
                android:layout_weight="1"
                android:maxLength="15"
                android:layout_marginRight="@dimen/five_dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_contact"
                android:textSize="@dimen/ten_sp"
                android:id="@+id/tvSmsParseEditFromContact"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rgSmsParseEdit">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbOnlyExpense"
                    android:text="@string/only_expense"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbOnlyIncome"
                    android:text="@string/only_income"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbBoth"
                    android:text="@string/parse_both"/>
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/ten_dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/twelve_sp"
                        android:text="@string/expense_keywords"
                        android:textColor="@color/toolbar_text_color"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:enabled="false"
                        android:gravity="center_horizontal"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etSmsParseEditIncome"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/twelve_sp"
                        android:text="@string/income_keywords"
                        android:textColor="@color/toolbar_text_color"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:enabled="false"
                        android:gravity="center_horizontal"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etSmsParseEditExpense"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fourteen_sp"
                    android:text="@string/account"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/toolbar_text_color"
                    android:layout_marginRight="@dimen/ten_dp"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spSmsParseEditAccount"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/ten_dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fourteen_sp"
                    android:text="@string/currency"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/toolbar_text_color"
                    android:layout_marginRight="@dimen/ten_dp"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spSmsParseEditCurrency"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/ten_dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/fourteen_sp"
                    android:text="@string/amount_keywords"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/toolbar_text_color"
                    android:layout_marginRight="@dimen/ten_dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etSmsParseAmountKeywords"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>